--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/watchify/bin/cmd.js src/index.js -o build/index.js"
+    "start": "./node_modules/watchify/bin/cmd.js src/index.js -o build/index.js",
+    "build": "./node_modules/browserify/bin/cmd.js src/index.js -o build/index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "browserify": "^4.1.9",
     "three": "^0.66.2",
-    "watchify": "^0.10.2"
+    "watchify": "^0.10.2",
+    "underscore": "^1.6.0"
   }
 }
